--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             <li class="foot-soc-item">
               <a href="" class="foot-soc-link">
                 <svg class="foot-soc-icon" width="24" height="24">
-                  <use href="./images/icon.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
@@ -456,5 +456,70 @@
         </div>
       </div>
     </footer>
+    <!-- modal -->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button type="button" class="modal-button-close">
+          <svg width="8" height="8" class="icon-close">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="input-cont">
+            <label for="user-name" class="input-label">Name</label>
+            <div class="input-line">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="modal-input"
+                required
+                placeholder="your name"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- input pfone -->
+          <div class="input-cont">
+            <label for="user-name" class="input-label">Pfone</label>
+            <div class="input-line">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="modal-input"
+                required
+                placeholder="your pfone"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <!--email -->
+          <div class="input-cont">
+            <label for="user-name" class="input-label">Email</label>
+            <div class="input-line">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="modal-input"
+                required
+                placeholder="your email"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+
+          <!-- end modal-->
+        </form>
+      </div>
+    </div>
   </body>
 </html>
