--- a/index.html
+++ b/index.html
@@ -409,7 +409,6 @@
         </div>
       </section>
     </main>
-
     <footer class="foot">
       <div class="container foot-cont">
         <div class="foot-logo-cont">
@@ -454,13 +453,34 @@
             </li>
           </ul>
         </div>
+        <!-- form sub -->
+        <div class="sub-cont">
+          <p class="social-media">Subscribe</p>
+          <form class="sub-form" name="Subscribe">
+            <label class="sub-label" for="email-sub">
+              <input
+                class="sub-input"
+                type="email"
+                name="email"
+                id="email-sub"
+                placeholder="E-mail"
+            /></label>
+            <button class="foot-sub-btn" type="submit">
+              Subscribe
+              <svg class="foot-soc-icon plane-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+        <!-- end form sub -->
       </div>
     </footer>
     <!-- modal -->
     <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-button-close">
-          <svg width="8" height="8" class="icon-close">
+          <svg class="icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
@@ -470,54 +490,72 @@
             <label for="user-name" class="input-label">Name</label>
             <div class="input-line">
               <input
+                class="modal-input"
                 type="text"
                 id="user-name"
                 name="user-name"
-                class="modal-input"
-                required
-                placeholder="your name"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
-          <!-- input pfone -->
           <div class="input-cont">
-            <label for="user-name" class="input-label">Pfone</label>
+            <label for="user-phone" class="input-label">Phone</label>
             <div class="input-line">
               <input
-                type="text"
-                id="user-name"
-                name="user-name"
                 class="modal-input"
-                required
-                placeholder="your pfone"
+                type="tel"
+                id="user-phone"
+                name="user-phone"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
           </div>
-          <!--email -->
           <div class="input-cont">
-            <label for="user-name" class="input-label">Email</label>
+            <label for="user-email" class="input-label">Email</label>
             <div class="input-line">
               <input
-                type="text"
-                id="user-name"
-                name="user-name"
                 class="modal-input"
-                required
-                placeholder="your email"
+                type="email"
+                id="user-email"
+                name="user-email"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
           </div>
-
-          <!-- end modal-->
+          <div class="comment-cont">
+            <label for="user-comment" class="input-label">Comment</label>
+            <textarea
+              class="comment-input"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="policy-cont">
+            <input
+              class="policy-inpcheck visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              value="true"
+              id="user-privacy"
+            />
+            <label class="policy-label" for="user-privacy">
+              <span class="check-input">
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="policy-link" href="#">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="order-servise-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
